--- a/src/app.css
+++ b/src/app.css
@@ -1,36 +1,36 @@
 @import 'tailwindcss';
 
 @plugin "daisyui" {
-	themes: nord;
+	themes: emerald;
 }
 
 @plugin "daisyui/theme" {
-	name: 'nord';
+	name: 'emerald';
 	default: true;
 	prefersdark: false;
 	color-scheme: 'light';
-	--color-base-100: oklch(95.127% 0.007 260.731);
-	--color-base-200: oklch(93.299% 0.01 261.788);
-	--color-base-300: oklch(89.925% 0.016 262.749);
-	--color-base-content: oklch(32.437% 0.022 264.182);
-	--color-primary: oklch(59.435% 0.077 254.027);
-	--color-primary-content: oklch(11.887% 0.015 254.027);
-	--color-secondary: oklch(69.651% 0.059 248.687);
-	--color-secondary-content: oklch(13.93% 0.011 248.687);
-	--color-accent: oklch(77.464% 0.062 217.469);
-	--color-accent-content: oklch(15.492% 0.012 217.469);
-	--color-neutral: oklch(45.229% 0.035 264.131);
-	--color-neutral-content: oklch(89.925% 0.016 262.749);
-	--color-info: oklch(69.207% 0.062 332.664);
-	--color-info-content: oklch(13.841% 0.012 332.664);
-	--color-success: oklch(76.827% 0.074 131.063);
-	--color-success-content: oklch(15.365% 0.014 131.063);
-	--color-warning: oklch(85.486% 0.089 84.093);
-	--color-warning-content: oklch(17.097% 0.017 84.093);
-	--color-error: oklch(60.61% 0.12 15.341);
-	--color-error-content: oklch(12.122% 0.024 15.341);
+	--color-base-100: oklch(100% 0 0);
+	--color-base-200: oklch(93% 0 0);
+	--color-base-300: oklch(86% 0 0);
+	--color-base-content: oklch(35.519% 0.032 262.988);
+	--color-primary: oklch(76.662% 0.135 153.45);
+	--color-primary-content: oklch(33.387% 0.04 162.24);
+	--color-secondary: oklch(61.302% 0.202 261.294);
+	--color-secondary-content: oklch(100% 0 0);
+	--color-accent: oklch(72.772% 0.149 33.2);
+	--color-accent-content: oklch(0% 0 0);
+	--color-neutral: oklch(35.519% 0.032 262.988);
+	--color-neutral-content: oklch(98.462% 0.001 247.838);
+	--color-info: oklch(72.06% 0.191 231.6);
+	--color-info-content: oklch(0% 0 0);
+	--color-success: oklch(64.8% 0.15 160);
+	--color-success-content: oklch(0% 0 0);
+	--color-warning: oklch(84.71% 0.199 83.87);
+	--color-warning-content: oklch(0% 0 0);
+	--color-error: oklch(71.76% 0.221 22.18);
+	--color-error-content: oklch(0% 0 0);
 	--radius-selector: 1rem;
-	--radius-field: 1rem;
+	--radius-field: 0.5rem;
 	--radius-box: 1rem;
 	--size-selector: 0.25rem;
 	--size-field: 0.25rem;
